# yarp-device-argus

./: .gitignore  CMakeLists.txt  LICENSE  README.md
conf/: argus_camera_wrapper.xml  camera.xml  conf.ini
doc/: setup_orin-nx_framos-imx415.md
src/: CMakeLists.txt
src/devices/: CMakeLists.txt
src/devices/argusCamera/: CMakeLists.txt  argusCameraDriver.cpp  argusCameraDriver.h  argusCameraDriver_ParamsParser.cpp  argusCameraDriver_ParamsParser.h  argusCameraDriver_params.md
